--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cn": "^0.1.1",
